# Sonnect

./: .gitignore  README.md  meson.build  scan_include.py  scan_src.py
benchmark/: base.conf  meson.build  sc_main.c  sc_port.c  scan_include.py  scan_src.py
benchmark/conf/: sketch.conf
benchmark/include/: sc_app.h  sc_global.h  sc_log.h  sc_port.h  sc_utils.h  sc_worker.h
benchmark/include/sc_sketch/: cm_sketch.h  sc_sketch.h  sketch.h
benchmark/src/: sc_app.c  sc_log.c  sc_main.c  sc_port.c  sc_utils.c  sc_worker.c
benchmark/src/sc_sketch/: cm_sketch.c  meson.build  sc_sketch.c  sketch.c
benchmark/src/sc_utils/: map.c
conf/: dpdk.conf
conf/apps/: echo_client.conf  echo_server.conf  sha.conf
deprecated/include/sc_pktgen/: pktgen.h
deprecated/include/sc_sha/: sha.hpp
deprecated/include/sc_sketch/: cm_sketch.h  sketch.h
deprecated/sc_sha/: mempool.c  meson.build
deprecated/sc_sketch/: meson.build
deprecated/src/sc_pktgen/: pktgen.c
deprecated/src/sc_sha/: mempool.c  sha.cpp  sha256_x86.c
deprecated/src/sc_sketch/: cm_sketch.cpp  sketch.cpp
doc/: sc.drawio
include/: sc_app.hpp  sc_compile_debug.hpp  sc_control_plane.hpp  sc_doca.h  sc_doca.hpp  sc_doca_utils.h  sc_global.h  sc_global.hpp  sc_log.hpp  sc_mbuf.h  sc_mbuf.hpp  sc_port.h  sc_port.hpp  sc_utils.h  sc_utils.hpp  sc_worker.h  sc_worker.hpp
include/apps/sc_echo_client/: echo_client.h  echo_client.hpp
include/apps/sc_echo_server/: echo_server.h  echo_server.hpp
include/apps/sc_pktgen/: pktgen.h
include/apps/sc_sha/: sha.h  sha.hpp
include/apps/sc_sketch/: cm_sketch.h  sketch.h
include/apps/sc_template/: template.h  template.hpp
include/sc_doca_utils/: doca_utils.hpp  mempool.hpp
include/sc_utils/: distribution_gen.h  distribution_gen.hpp  list.hpp  list_backup.hpp  map.hpp  pktgen.h  pktgen.hpp  rss.h  rss.hpp  sort.h  tail_latency.hpp  timestamp.hpp
ref/dpdk_app/test/: test_func_reentrancy.c  test_mempool.c  test_mempool_perf.c
scripts/: hugepage.sh  intel_nic_bind.sh
src/: sc_app.c  sc_app.cpp  sc_control_plane.cpp  sc_doca.c  sc_doca.cpp  sc_doca_utils.c  sc_doca_utils.cpp  sc_log.c  sc_log.cpp  sc_main.c  sc_main.cpp  sc_mbuf.c  sc_mbuf.cpp  sc_port.c  sc_port.cpp  sc_utils.c  sc_utils.cpp  sc_worker.c  sc_worker.cpp
src/apps/: .app_list
src/apps/sc_echo_client/: echo_client.c  echo_client.cpp  latency_analyse.py  meson.build
src/apps/sc_echo_server/: echo_server.c  echo_server.cpp  meson.build
src/apps/sc_pktgen/: meson.build  pktgen.c
src/apps/sc_sha/: meson.build  sha.c  sha.cpp  sha256_arm.c  sha256_x86.c
src/apps/sc_sketch/: cm_sketch.c  sketch.c
src/apps/sc_template/: template.c  template.cpp
src/sc_doca_utils/: doca_utils.cpp  mempool.cpp
src/sc_sketch/: cm_sketch.c
src/sc_utils/: distribution_gen.c  distribution_gen.cpp  map.cpp  pktgen.c  pktgen.cpp  rss.c  rss.cpp  sort.c  sort.cpp  tail_latency.c  tail_latency.cpp
src/sc_utils/pktgen/: arp.cpp  ether.cpp  ipv4.cpp  ipv6.cpp  pktgen.cpp  sctp.cpp  tcp.cpp  udp.cpp
template/: base.conf
template/include/: sc_global.h  sc_utils.h  sc_worker.h
template/src/: sc_main.c  sc_port.c  sc_worker.c
utils/: latency_analyse.py
